force-app/main/default/objects/ht_LineOfAuthority__c/ht_LineOfAuthority__c.object-meta.xml
<CustomObject>
    <label>NIPR Line Of Authority</label>
    <nameField>
        <displayFormat>LOA-{0000}</displayFormat>
        <label>Line Of Authority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Lines Of Authority</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>