force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEAsOfDate__c.field-meta.xml
<CustomField>
    <fullName>ht_CEAsOfDate__c</fullName>
    <label>CE As Of Date</label>
    <type>Date</type>
</CustomField>