force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEEndDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEEndDate__c</fullName>
    <label>CE End Date</label>
    <type>Date</type>
</CustomField>