force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CERenewalDate__c.field-meta.xml
<CustomField>
    <fullName>ht_CERenewalDate__c</fullName>
    <label>CE Renewal Date</label>
    <type>Date</type>
</CustomField>