force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEStateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ht_CEStateOrProvinceCode__c</fullName>
    <label>CE State Or Province Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>