force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ht_CEStatusCode__c</fullName>
    <label>CE Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>