force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>ht_CEStatusDescription__c</fullName>
    <label>CE Status Description</label>
    <type>TextArea</type>
</CustomField>