force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEUnitsRemainingMeasure__c.field-meta.xml
<CustomField>
    <fullName>ht_CEUnitsRemainingMeasure__c</fullName>
    <label>CE Units Remaining Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>