force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_CEUnitsRequiredMeasure__c.field-meta.xml
<CustomField>
    <fullName>ht_CEUnitsRequiredMeasure__c</fullName>
    <label>CE Units Required Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>