force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_IsProductMatched__c.field-meta.xml
<CustomField>
    <fullName>ht_IsProductMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Matched</label>
    <type>Checkbox</type>
</CustomField>