force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_License__c.field-meta.xml
<CustomField>
    <fullName>ht_License__c</fullName>
    <label>License</label>
    <referenceTo>ht_License__c</referenceTo>
    <relationshipLabel>NIPR Lines Of Authority</relationshipLabel>
    <relationshipName>Lines_Of_Authority</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>