force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_LineOfAuthorityCode__c.field-meta.xml
<CustomField>
    <fullName>ht_LineOfAuthorityCode__c</fullName>
    <label>Line Of Authority Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>