force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_LineOfAuthorityDescription__c.field-meta.xml
<CustomField>
    <fullName>ht_LineOfAuthorityDescription__c</fullName>
    <label>Line Of Authority Description</label>
    <type>TextArea</type>
</CustomField>