force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_LOAMapping__c.field-meta.xml
<CustomField>
    <fullName>ht_LOAMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOA Mapping</label>
    <referenceTo>ht_LOA_Insurance_Product_Mapping__c</referenceTo>
    <relationshipName>Lines_Of_Authority</relationshipName>
    <type>Lookup</type>
</CustomField>