force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StartDate__c.field-meta.xml
<CustomField>
    <fullName>ht_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>