force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StateOrProvinceName__c.field-meta.xml
<CustomField>
    <fullName>ht_StateOrProvinceName__c</fullName>
    <label>State Or Province Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>