force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>ht_StatusCode__c</fullName>
    <label>Status Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>