force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>ht_StatusDescription__c</fullName>
    <label>Status Description</label>
    <type>TextArea</type>
</CustomField>