force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StatusReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ht_StatusReasonCode__c</fullName>
    <label>Status Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>