force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_StatusReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>ht_StatusReasonDescription__c</fullName>
    <label>Status Reason Description</label>
    <type>TextArea</type>
</CustomField>