force-app/main/default/objects/ht_LineOfAuthority__c/fields/ht_UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ht_UniqueIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>