force-app/main/default/objects/ht_LineOfAuthority__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_LineOfAuthorityCode__c</columns>
    <columns>ht_LineOfAuthorityDescription__c</columns>
    <columns>ht_License__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>